my mind is getting fucked in a good way

--- a/lambda_calculus.ipynb
+++ b/lambda_calculus.ipynb
@@ -262,7 +262,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<function FALSE at 0x110803a60>\n"
+      "<function FALSE at 0x10b7899d8>\n"
      ]
     }
    ],
@@ -279,7 +279,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<function TRUE at 0x1108039d8>\n"
+      "<function TRUE at 0x10b789950>\n"
      ]
     }
    ],
@@ -341,10 +341,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<function TRUE at 0x1108039d8>\n",
-      "<function FALSE at 0x110803a60>\n",
-      "<function FALSE at 0x110803a60>\n",
-      "<function FALSE at 0x110803a60>\n"
+      "<function TRUE at 0x10b789950>\n",
+      "<function FALSE at 0x10b7899d8>\n",
+      "<function FALSE at 0x10b7899d8>\n",
+      "<function FALSE at 0x10b7899d8>\n"
      ]
     }
    ],
@@ -409,10 +409,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<function TRUE at 0x1108039d8>\n",
-      "<function TRUE at 0x1108039d8>\n",
-      "<function TRUE at 0x1108039d8>\n",
-      "<function FALSE at 0x110803a60>\n"
+      "<function TRUE at 0x10b789950>\n",
+      "<function TRUE at 0x10b789950>\n",
+      "<function TRUE at 0x10b789950>\n",
+      "<function FALSE at 0x10b7899d8>\n"
      ]
     }
    ],
@@ -971,7 +971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -980,7 +980,7 @@
        "<function __main__.cons.<locals>.select(m)>"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -992,7 +992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1011,7 +1011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1020,7 +1020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1029,7 +1029,7 @@
        "<function __main__.<lambda>.<locals>.<lambda>.<locals>.<lambda>(s)>"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1048,7 +1048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1057,7 +1057,7 @@
        "2"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1068,7 +1068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -1077,13 +1077,351 @@
        "3"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "p(FALSE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function __main__.<lambda>.<locals>.<lambda>.<locals>.<lambda>(s)>"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p = CONS(2)(CONS(3)(4))\n",
+    "p"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "4\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(p(TRUE))\n",
+    "print(p(FALSE)(FALSE))\n",
+    "print(p(FALSE)(TRUE))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "CAR = lambda p: p(TRUE)\n",
+    "CDR = lambda p: p(FALSE)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## SUBSTRACTION\n",
+    "\n",
+    "Starti with the pair `(0, 0)` and use de **successor** until you reach the number."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3, 2)"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def t(p):\n",
+    "    return (p[0] + 1, p[0])\n",
+    "\n",
+    "THREE(p)((0, 0))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`t[0]` is `CAR(t)` \n",
+    "\n",
+    "`t[0] + 1` is the `SUCC` of `CAR(t)``\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "T = lambda p: CONS(SUCC(CAR(p)))(CAR(p))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = FOUR(T)(CONS(ZERO)(ZERO))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "CAR(a)(incr)(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "CDR(a)(incr)(0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### PREDECESSOR\n",
+    "\n",
+    "Take a number `n` and apply that number to the `T` function we declared before, so we are going our way up with the tuple. And the we take the `CDR`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PRED = lambda n: CDR(n(T)(CONS(ZERO)(ZERO)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "PRED(FOUR)(incr)(0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### SUBSTRACTION"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SUB = lambda x: lambda y: y(PRED)(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = SUB(FOUR)(TWO)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a(incr)(0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### EQUALITY"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`lambda f: FALSE` we disregard the argument and always return `FALSE`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ISZERO = lambda n: n(lambda f: FALSE)(TRUE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<function TRUE at 0x10b789950>\n",
+      "<function FALSE at 0x10b7899d8>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(ISZERO(ZERO))\n",
+    "print(ISZERO(TWO))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "toc-hr-collapsed": false
+   },
+   "source": [
+    "## Recurssion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### FACTORIAL"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "24"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 'regular' python\n",
+    "def fact(n):\n",
+    "    if n == 0:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return n * fact(n - 1)\n",
+    "\n",
+    "\n",
+    "fact(4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**NOTES** for the following code:\n",
+    "\n",
+    "`ISZERO()` is going to return `TRUE` or `FALSE`, which act like and *if statement*."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "FACT = lambda n: ISZERO(n)(ONE)(MUL(n(FACT(PRED(n)))))"
    ]
   },
   {
